--- a/trojai haboru.css
+++ b/trojai haboru.css
@@ -1,7 +1,8 @@
 body{
-  color: #293647;
+  color: #1e3758;
   background-color: rgba(172, 168, 168, 0.445);
   font-family: britannic;
+  background-image: url(depositphotos_24493081-stock-photo-old-paper.png);
 }
 
 .bg-fej {
